Fix search box overflow, card increase width for mobile devices

--- a/Bazar/static/Bazar/home/home.css
+++ b/Bazar/static/Bazar/home/home.css
@@ -95,7 +95,7 @@ Last search elements
 	font-weight: 500;
 	height: 2.8rem;
 	line-height: 2rem;
-	overflow-x: hidden;
+	overflow: hidden;
 	padding-top: 0.8rem;
 }
 
@@ -134,7 +134,7 @@ Search results
 #search-results {
 	padding-bottom: 5rem;
 	padding-left: 2.5%;
-	padding-top: 3rem;
+	padding-top: 2rem;
 	position: relative;
 	text-align: center;
 	width: 100%;
@@ -235,4 +235,14 @@ Search results
 	position: absolute;
 	text-align: justify;
 	word-break: break-all;
+}
+
+@media screen and (max-width: 480px) {
+	#search-results .results-card-box {
+		width: 300px;
+	}
+
+	#search-results .results-card-description {
+		max-width: 300px;
+	}
 }
